--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Ignore LiteDB database files
-*.db
+# Ignore test results
+TestResults/
 
 # From https://github.com/github/gitignore/blob/main/community/DotNet/core.gitignore
 
