Improve Readme.md and add some metadata for NuGet package.

--- a/ScreenLibrary/ScreenLibrary.csproj
+++ b/ScreenLibrary/ScreenLibrary.csproj
@@ -1,7 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<PackageId>Terminal.ScreenLibrary</PackageId>
+		<Copyright>copyright@nictheboy</Copyright>
+		<Authors>nictheboy</Authors>
+		<Company>ghg-online</Company>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<PackageVersion>0.1.0-beta</PackageVersion>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageDescription>This is a library for creating a terminal screen with a text-based user interface.</PackageDescription>
+		<PackageReleaseNotes>This is a beta version, and bugs may exist.</PackageReleaseNotes>
+		<PackageTags>terminal;screen;library</PackageTags>
+		<PackageProjectUrl>https://github.com/ghg-online/Terminal.ScreenLibrary</PackageProjectUrl>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/ghg-online/Terminal.ScreenLibrary</RepositoryUrl>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="../README.md" Pack="true" PackagePath="/"/>
+		<None Include="../LICENSE.txt" Pack="true" PackagePath="/"/>
+	</ItemGroup>
 
 </Project>
